Bug 442514 - Missing labels in activity configuration
Summary: Missing labels in activity configuration
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.86.0
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-16 11:21 UTC by Oleg Solovyov
Modified: 2021-09-20 16:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
info (26.84 KB, image/jpeg)
2021-09-16 12:33 UTC, Oleg Solovyov
Details
kf 5.85 (105.90 KB, image/jpeg)
2021-09-16 12:59 UTC, Oleg Solovyov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Solovyov 2021-09-16 11:21:00 UTC
STEPS TO REPRODUCE
1. Open activity switcher
2. Click "Configure"

OBSERVED RESULT
Labels are missing

EXPECTED RESULT
Labell are visible

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.11.0-34generic
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Regression since KF 5.86
Comment 1 Harald Sitter 2021-09-16 12:23:11 UTC
Screenshot please.
Comment 2 Oleg Solovyov 2021-09-16 12:33:24 UTC
Created attachment 141591 [details]
info
Comment 3 Harald Sitter 2021-09-16 12:42:47 UTC
And you are quite certain that first appeared in kf5.86?
Comment 4 Oleg Solovyov 2021-09-16 12:59:46 UTC
Created attachment 141592 [details]
kf 5.85

(In reply to Harald Sitter from comment #3)
> And you are quite certain that first appeared in kf5.86?
Yes I am.

Please do not WAITFORINFO unless you were unable to reproduce the bug with steps given in description.
Comment 5 Oleg Solovyov 2021-09-16 13:02:39 UTC
Kirigami is broken. Re-assigning.
Comment 6 Oleg Solovyov 2021-09-16 14:38:19 UTC
Broken after
* f8e14f9c Rewrite Units in c++
Comment 7 Bug Janitor Service 2021-09-20 15:56:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/567
Comment 8 Nicolas Fella 2021-09-20 16:09:02 UTC
Git commit 550f2f7c30da7d1aa29e67820ec41c4cd155224d by Nicolas Fella.
Committed on 20/09/2021 at 15:54.
Pushed by ngraham into branch 'master'.

[kcms/activities] Fix QML i18n calls

Set a KLocalizedContext, otherwise i18n and friends are not available

M  +3    -0    kcms/activities/ActivitiesTab.cpp
M  +2    -0    kcms/activities/imports/dialog.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/550f2f7c30da7d1aa29e67820ec41c4cd155224d
Comment 9 Nate Graham 2021-09-20 16:09:36 UTC
Git commit 40f446488be52557a756ab38f15f71aacfa62cf6 by Nate Graham, on behalf of Nicolas Fella.
Committed on 20/09/2021 at 16:09.
Pushed by ngraham into branch 'Plasma/5.23'.

[kcms/activities] Fix QML i18n calls

Set a KLocalizedContext, otherwise i18n and friends are not available


(cherry picked from commit 550f2f7c30da7d1aa29e67820ec41c4cd155224d)

M  +3    -0    kcms/activities/ActivitiesTab.cpp
M  +2    -0    kcms/activities/imports/dialog.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/40f446488be52557a756ab38f15f71aacfa62cf6