[kcms/activities] Fix QML i18n calls

Set a KLocalizedContext, otherwise i18n and friends are not available

BUG: 442514


(cherry picked from commit 550f2f7c30da7d1aa29e67820ec41c4cd155224d)